descriptionから書込み内容の逆読み

--- a/googleOSD/googleOSD/googleOSD/GEventEdit.xaml
+++ b/googleOSD/googleOSD/googleOSD/GEventEdit.xaml
@@ -46,30 +46,11 @@
 			<Setter Property="Template"  Value="{StaticResource buttonTemplate}"/>
 		</Style>
 
-		<!--<ControlTemplate x:Key="buttonTemplate"  TargetType="Button">
-			<Border Name="border"
-                BorderThickness="1"
-                BorderBrush="LightGray"
-                Background="{TemplateBinding Background}"
-                CornerRadius="2">
-				<ContentPresenter VerticalAlignment="Center"
-                              HorizontalAlignment="Center" />
-			</Border>
-		</ControlTemplate>
-
-
-
-		<Style TargetType="Button">
-			<Setter Property="Margin" Value="0,5,0,5"/>
-			<Setter Property="Template"  Value="{StaticResource buttonTemplate}"/>
-		</Style>-->
-
-
+		<!--添付ファイル-->
 		<Style x:Key="bt-attachment" TargetType="Button">
 			<Setter Property="HorizontalContentAlignment" Value="Left" />
 			<Setter Property="Margin" Value="3,3,3,3" />
-			<Setter Property="Padding" Value="10,-5,0,-5" />
-			<Setter Property="Width" Value="100" />
+			<Setter Property="Padding" Value="8,5,10,5" />
 			<Setter Property="Panel.ZIndex" Value="90" />
 		</Style>
 		<Style x:Key="bt-dell" TargetType="Button">
@@ -315,20 +296,17 @@
 								Panel.ZIndex="10" 
 								Name="attachments_sp" 
 				/>
-
 		<StackPanel   Grid.Row="14"  Grid.Column="1"  Grid.ColumnSpan="3" Orientation="Horizontal"  
 								HorizontalAlignment="Stretch"  VerticalAlignment="Top"  Margin="0" 
 								Name="drop_sp" 
 								Drop="Attachments_sp_Drop"  AllowDrop="true" 
 								MouseUp="Attachments_sp_MouseUp"
 				>
-				<Rectangle  Grid.Row="14" Grid.Column="1" Grid.ColumnSpan="3" Height="33"  
-								Fill="#FFE1E2E2" Stroke="Black" StrokeThickness="1" StrokeDashArray="5" Width="463" Margin="0,8,0,0" >
-				</Rectangle>
+			<Rectangle  Grid.Row="14" Grid.Column="1" Grid.ColumnSpan="3" Height="33"  
+								Fill="#FFE1E2E2" Stroke="Black" StrokeThickness="1" StrokeDashArray="5" Width="463" />
 		</StackPanel>
 		<TextBlock Text="ファイルをドロップするか、クリックしてファイルを選択して下さい。" x:Name="attachments_tb"
 								Grid.Row="14" Grid.Column="1"  Grid.ColumnSpan="3" TextAlignment="Center" 
-								Panel.ZIndex="10" 
 								HorizontalAlignment="Center"  VerticalAlignment="Center"/>
 
 		<Button   Grid.Row="16" Grid.Column="0" 
