--- a/googleOSD/googleOSD/googleOSD/GEventEdit.xaml
+++ b/googleOSD/googleOSD/googleOSD/GEventEdit.xaml
@@ -8,7 +8,7 @@
         Title="イベント登録"  FontSize="12" 
 		ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.VerticalScrollBarVisibility="Auto" 
 	    WindowStartupLocation="CenterScreen" 
-		Width="600" Height="450"
+		Width="800" Height="Auto"
 		Closing="Window_Closing" >
 
 	<Window.Resources>
@@ -315,15 +315,16 @@
 			</Grid.ColumnDefinitions>
 
 			<!-- DataGrid（画面左側）：双方向バインド（UI上での変更がデータに反映される） -->
-			<DataGrid x:Name="attachments_dg"
+			<DataGrid x:Name="Attachments_dg"
               AutoGenerateColumns="False" HorizontalAlignment="Left" 
+			  Height="80"
               ItemsSource="{Binding DataContext, Mode=TwoWay, RelativeSource={RelativeSource Self}}" 
-              SelectionChanged="DataGrid1_SelectionChanged"
+              SelectionChanged="Attachments_SelectionChanged" SelectionMode="Single" Grid.ColumnSpan="4" Width="625"
               >
 				<DataGrid.Columns>
-					<DataGridTextColumn Binding="{Binding Index}" Header="Title" MinWidth="210" Width="Auto" />
-					<DataGridTextColumn Binding="{Binding Value}" Header="modifi" MinWidth="100" Width="Auto"  />
-					<DataGridTextColumn Binding="{Binding Value}" Header="サイズ" MinWidth="100" />
+					<DataGridTextColumn Binding="{Binding Title}" Header="Title" MinWidth="200" Width="Auto" />
+					<DataGridTextColumn Binding="{Binding Modifi}" Header="modifi" MinWidth="100" Width="Auto"  />
+					<DataGridTextColumn Binding="{Binding Size}" Header="サイズ" MinWidth="100" />
 					<DataGridTextColumn Binding="{Binding Value}" Header="削除" MinWidth="50" />
 				</DataGrid.Columns>
 			</DataGrid>
@@ -349,7 +350,7 @@
 								Grid.Row="14" Grid.Column="1"  Grid.ColumnSpan="3" TextAlignment="Center" 
 								HorizontalAlignment="Center"  VerticalAlignment="Top"/>-->
 		<Label  Grid.Row="15" Grid.Column="0"   Content="メモ" HorizontalAlignment="Right" VerticalAlignment="Top"  />
-		<TextBox  Grid.Row="15" Grid.Column="1"  Grid.ColumnSpan="3" Height="56"
+		<TextBox  Grid.Row="15" Grid.Column="1"  Grid.ColumnSpan="3" Height="80"
 						Name="memo_tb"  Text="ABCdef"   VerticalAlignment="Center"  />
 
 		<Button   Grid.Row="16" Grid.Column="0" 
